--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,37 @@
-<p>login works!</p>
+<div class="container" style="max-width: 550px">
+    <h2 class="text-center mb-5">Angular Login with Google</h2>
+  
+    <div *ngIf="isLoggedin === false">
+        <div style="display: flex; align-items: center; justify-content:center;">
+            <h3 style="font-family: montserrat">Google Social Login</h3>
+            </div>
+            <div style="height: 10rem; display: flex; align-items: center; justify-content:center;">
+          
+          <button mat-button style="padding: 1rem;" (click)="loginWithGoogle()">
+          <mat-icon style="width: 50px; height:30px"></mat-icon> Login With Google</button>  
+          
+          </div>
+
+          <div class="row">
+            <a class="waves-effect waves-light btn col s12 social google" (click)="loginWithGoogle()">
+            <i class="fa fa-google"></i>Ingresar con correo de HITO</a>
+          </div>
+    </div>
+  
+    <div *ngIf="isLoggedin === true">
+      <div class="form-group">
+        <label>First Name</label>
+        <input type="text" class="form-control" [value]="socialUser.firstName" id="firstname" readonly>
+      </div>
+      <div class="form-group">
+        <label>Last Name</label>
+        <input type="text" class="form-control" [value]="socialUser.lastName" id="lastname" readonly>
+      </div>
+      <div class="form-group">
+        <label>Email</label>
+        <input type="text" class="form-control" [value]="socialUser.email" id="email" readonly>
+      </div>
+  
+      <button type="button" (click)="logOut()" class="btn btn-primary">Log Out</button>
+    </div>
+  </div>
