--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -1,4 +1,44 @@
-.expanded-toolbar {
+/*.expanded-toolbar {
     justify-content: space-between;
     align-items: center;
   }
+  */
+
+mat-toolbar{
+  position: sticky;
+  top:0;
+  z-index: 100;
+  background: #5c8a0e;
+}
+
+ul{
+  li{
+    list-style: none;
+  }
+}
+
+button{
+  border: 0;
+  background:transparent;
+}
+
+.user{
+  font-size: 14px;
+}
+
+.user-image{
+  border-radius: 50%;
+  width: 50px;
+  height: 50px;
+}
+
+.user-image-icon{
+  height: 18px;
+  font-size: 16px;
+}
+::ng-deep{
+  .mat-menu-content{
+    width: 160px;
+  }
+}
+
