--- a/src/app/layout/header/header.component.html
+++ b/src/app/layout/header/header.component.html
@@ -13,12 +13,12 @@
       <ul *ngIf="isLoggedin === true">
         <li>
           <button mat-button [matMenuTriggerFor]="menu" class="user mt-2 d-flex align-items-center">
-            <img src="{{socialUser.photoUrl}}" alt="" class="user-image mr-1 p-2"/>
-            {{socialUser.email}}
+            <img src="{{getImagen()}}" alt="" class="user-image mr-1 p-2"/>
+            {{getEmail()}}
             <mat-icon class="user-image-icon ml-1">keyboard_arrow_down</mat-icon>
           </button>
           <mat-menu #menu="matMenu">
-            <mat-list-item role="listitem">{{socialUser.firstName}} {{socialUser.lastName}}</mat-list-item>
+            <mat-list-item role="listitem">{{getUsuario()}}</mat-list-item>
             <button mat-menu-item (click)="logOut()"><mat-icon>exit_to_app</mat-icon>Logout</button>
           </mat-menu>
         </li>
