--- a/src/app/layout/dashboard/dashboard.component.html
+++ b/src/app/layout/dashboard/dashboard.component.html
@@ -1,2 +1,14 @@
-<p>dashboard works!</p>
-{{socialUser.firstName}} {{socialUser.email}}
+<div class="card mb-3" style="width: 100%; height: 500px;">
+    <div class="row g-0">
+      <div class="col-md-4">
+        <img src="../../assets/hito.png" class="img-fluid rounded-start" alt="...">
+      </div>
+      <div class="col-md-8">
+        <div class="card-body">
+          <h5 class="card-title">Sistema de administracion maestra SHF</h5>
+          <p class="card-text">Administracion y operacion</p>
+          <p class="card-text"><small class="text-muted">Investigacion y Desarrollo</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
