--- a/src/app/layout/header/header.component.scss
+++ b/src/app/layout/header/header.component.scss
@@ -3,9 +3,11 @@
     align-items: center;
   }
   */
-
+.example-spacer {
+  flex: 1 1 auto;
+}
 mat-toolbar{
-  position: sticky;
+  //position: sticky;
   top:0;
   z-index: 100;
   background: #5c8a0e;
