--- a/src/app/pages/cat/carteras/carteras.component.html
+++ b/src/app/pages/cat/carteras/carteras.component.html
@@ -1,45 +1,12 @@
 <mat-card>
   <mat-card-title>Carteras</mat-card-title>
   <mat-card-subtitle>Carteras activas</mat-card-subtitle>
-  <mat-card-actions>
+  <!--<mat-card-actions>
     <button mat-button>Agregar</button>
     <button mat-button>Ver Procesos Cartera</button>
-  </mat-card-actions>
+  </mat-card-actions>-->
 </mat-card>
 <br>
 <mat-card>
-  <table mat-table [dataSource]="carteras" class="mat-elevation-z8 demo-table">
-    <!-- Position Column -->
-    <ng-container matColumnDef="i_Cartera_Comportamiento">
-      <th mat-header-cell *matHeaderCellDef>No.</th>
-      <td mat-cell *matCellDef="let element">{{element.i_Cartera_Comportamiento}}</td>
-    </ng-container>
-  
-    <!-- Name Column -->
-    <ng-container matColumnDef="d_Cartera_Comportamiento">
-      <th mat-header-cell *matHeaderCellDef>Alta</th>
-      <td mat-cell *matCellDef="let element">{{element.d_Cartera_Comportamiento}}</td>
-    </ng-container>
-
-    <!-- Name Column -->
-    <ng-container matColumnDef="n_Cartera_Comportamiento_Clave">
-        <th mat-header-cell *matHeaderCellDef>Clave</th>
-        <td mat-cell *matCellDef="let element">{{element.n_Cartera_Comportamiento_Clave}}</td>
-      </ng-container>
-    
-      <ng-container matColumnDef="n_Cartera_Comportamiento">
-        <th mat-header-cell *matHeaderCellDef>FISO</th>
-        <td mat-cell *matCellDef="let element">{{element.n_Cartera_Comportamiento}}</td>
-      </ng-container>
-      
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef>FISO</th>
-        <td mat-cell *matCellDef="let element">
-            <button  mat-button color="accent" >Edit</button>
-        </td>
-      </ng-container>
-  
-    <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-    <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-  </table>
+  <app-list-cartera></app-list-cartera>
 </mat-card>
