--- a/src/app/pages/cat/carteras/list-cartera/list-cartera.component.html
+++ b/src/app/pages/cat/carteras/list-cartera/list-cartera.component.html
@@ -38,7 +38,7 @@
       <ng-container matColumnDef="actions">
         <th mat-header-cell *matHeaderCellDef>Procesos</th>
         <td mat-cell *matCellDef="let element">
-          <button  mat-button color="accent" (click)="getCarteraDetalle($event,element)" >ir a procesos</button>
+          <button  mat-button color="primary" (click)="getCarteraDetalle($event,element)" >ir a procesos</button>
         </td>
       </ng-container>
 
