--- a/src/app/pages/cat/carteras/comportamiento/comportamiento.component.html
+++ b/src/app/pages/cat/carteras/comportamiento/comportamiento.component.html
@@ -67,7 +67,7 @@
                   <button mat-button [matMenuTriggerFor]="menu">Operaciones</button>
                   <mat-menu #menu="matMenu">
                     <button mat-menu-item (click)="dataProduction($event,element)" >Subir Datos</button>
-                    <button mat-menu-item (click)="dataProduction($event,element)" >Generar V9</button>
+                    <button mat-menu-item (click)="generateV9($event,element)" >Generar V9</button>
                   </mat-menu>
                   
                 </td>
